added control from button, added pixelate js

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,34 @@
         <meta charset="utf8"/>
         <title>Interaction Engine - Hello You!</title>
         <script src="/socket.io/socket.io.js"></script>
+        <style>
+            output {
+	      display: inline-block;
+	    }
+	    canvas {
+	      image-rendering: optimizeSpeed;
+	      image-rendering: -moz-crisp-edges;
+              image-rendering: -webkit-optimize-contrast;
+  	      image-rendering: -o-crisp-edges;
+	      image-rendering: crisp-edges;
+	      -ms-interpolation-mode: nearest-neighbor;
+	    }
+        </style>
     </head>
     <body>
         <body bgcolor="#000">
         <button onclick="ledON()">LED ON</button>
         <button onclick="ledOFF()">LED OFF</button>
         <button onclick="takePicture()">Take a picture</button>
+	
+	<div class="pixelation">Pixelation: 
+	  <input class="slider" type="range" min="0" max="100" value="0" /> 
+	  <output id="output">100%</output>
+	</div>
+
       </br>
         <img src="" id= "pictureContainer" alt="WebCam image  made by the webserver">
-        <script src="client.js"></script>
+	<script src="pixelate.js"></script>
+	<script src="client.js"></script>
     </body>
 </html>
